Fixings gaps in home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,14 +136,36 @@
 }
 
 .third-component {
-  height: 15vh;
+  /* height: 15vh;
+   */
+   height: 140px;
+  /* margin-top: 130px; */
+}
+@media(max-width: 1600px) {
+  .third-component {
+    /* height: 15vh;
+     */
+     height: 240px;
+    /* margin-top: 130px; */
+  }
+}
+@media(max-width: 1400px) {
+  .third-component {
+    /* height: 15vh;
+     */
+     height: 180px;
+    /* margin-top: 130px; */
+  }
 }
 
-@media (min-width: 1920px) {
-  .third-component {
-    height: 35vh;
-  }
 
+/* @media(max-width: 1600px) {
+  .third-component {
+    margin-top: 250px;
+  }
+} */
+
+@media (min-width: 1920px) {
   .forth-component {
     margin-top: 20vh;
   }
@@ -166,10 +188,6 @@
 }
 
 @media (max-width: 1680px) {
-  .third-component {
-    margin-top: 30vh;
-  }
-
   .forth-component {
     margin-top: 30vh;
   }
@@ -194,10 +212,6 @@
 
   .first-component {
     margin-top: 130vh;
-  }
-
-  .third-component {
-    margin-top: 65vh;
   }
 
   .forth-component {
@@ -256,10 +270,6 @@
 
   .a123 {
     margin-top: -5vh;
-  }
-
-  .third-component {
-    margin-top: 70vh;
   }
 
   .forth-component {
@@ -339,10 +349,6 @@
     margin-top: 140vh;
   }
 
-  .third-component {
-    margin-top: 100vh !important;
-  }
-
   .forth-component {
     margin-top: 70vh;
   }
@@ -398,7 +404,7 @@
 }
 
 .second-component {
-  margin-top: -200px;
+  margin-top: -400px;
 }
 
 .sixth-component {
